<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">宝贝说</string>
	<!-- 注册登陆 -->
	<string name="login">登陆</string>
	<string name="qq_login">QQ登陆</string>
	<string name="sina_weibo_login">微博登陆</string>
	<string name="register">注册</string>
	<string name="nickname">昵称</string>
	<string name="email">邮箱</string>
	<string name="password">密码</string>
	<string name="confirm_password">确认密码</string>
	<string name="sex">性别</string>
	<string name="female">女</string>
	<string name="male">男</string>
	<string name="birthday">生日</string>
	<string name="validation_name_empty">请输入用户名</string>
	<string name="validation_name_min_length">用户名长度不能少于3</string>
	<string name="validation_name_max_length">用户名长度不能超过12</string>
	<string name="validation_password_empty">请输入密码</string>
	<string name="validation_valid_email_empty">请输入邮箱</string>
	<string name="validation_valid_email_format">请输入正确的邮箱</string>
	<string name="validation_date">Date must be in future</string>
	<string name="login_by_social_account">或通过社交帐号直接登录</string>
	<string name="please_insert_sdcard">请插入内存卡</string>
	<!-- 其它 -->

	<string name="refresh">刷新</string>
	<string name="new_content">新建</string>
	<string name="register_pass">密码</string>
	<string name="register_pass_again">确认密码</string>
	<string name="forget_password">忘记密码?</string>
	<string name="for_title">忘记密码</string>
	<string name="for_content">请输入注册时所填的邮件地址</string>
	<string name="for_cancle">取消</string>
	<string name="for_confirm">确定</string>
	<string name="forget">忘记密码</string>
	<string name="take_photo">拍照</string>
<<<<<<< HEAD
	<string name="take_pic">从图库选择</string>
	<string name="login_by_social_account">或通过社交帐号直接登录</string>
	<!-- 开发测试 -->
	<string name="inflite">填充</string>
=======
	<string name="take_pic">相册</string>

>>>>>>> FETCH_HEAD
</resources>