<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:itbox="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:paddingTop="16dp" >

		<org.holoeverywhere.widget.EditText
			android:id="@+id/et_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email" />

		<org.holoeverywhere.widget.EditText
			android:id="@+id/et_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/password" />

		<TextView
			android:id="@+id/tv_forget"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:text="@string/forget_password"
			android:visibility="gone" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal" >

			<View
				android:layout_width="0dip"
				android:layout_height="1dip"
				android:layout_weight="1"
				android:background="@android:color/darker_gray" />

			<TextView
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="3.0"
				android:gravity="center"
				android:text="@string/login_by_social_account"
				android:textSize="15sp" />

			<View
				android:layout_width="0dip"
				android:layout_height="1dip"
				android:layout_weight="1"
				android:background="@android:color/darker_gray" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal" >

			<TextView
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawablePadding="5dp"
				android:drawableTop="@drawable/qq_login_selector"
				android:gravity="center"
				android:text="@string/qq_login"
				android:textSize="16sp" />

			<TextView
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawablePadding="5dp"
				android:drawableTop="@drawable/sina_weibo_login_selector"
				android:gravity="center"
				android:text="@string/sina_weibo_login"
				android:textSize="16sp" />
		</LinearLayout>
	</LinearLayout>

</ScrollView>