<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/forget"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/blue" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:text="@string/for_content"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/for_cancle" />

        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/for_confirm" />
    </LinearLayout>

</LinearLayout>